Double methods in Clazz.js; PT fix for map.toJSON
Double methods for -0 and NaN corrections; allows non-string map keys in
toJSON